[package]
name = "duolingo_rs"
version = "0.3.2"
authors = ["parkcitymedia <blakemichaelgaynor@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "rust wrapper for the duolingo api"
homepage = "https://github.com/parkcitymedia/duolingo_rs"
documentation = "https://docs.rs/duolingo_rs/latest/duolingo_rs/"
repository = "https://github.com/parkcitymedia/duolingo_rs"
readme = "README.md"
keywords = ["language","api","wrapper","third-party"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async dep
tokio = { version = "1", features = ["full"] }

# serialization & data manipulation
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"

#reqwest = "0.11"
reqwest = {version = "0.11", features = ["json","cookies"]}

# logging/datetime
chrono = {version = "0.4"}
